--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    // 가상환경 default로 실행
+    "python.defaultInterpreterPath": "/home/jangjh0201/venv/eda_venv/bin/python"
 }
