--- a/requirements.txt
+++ b/requirements.txt
@@ -15,16 +15,20 @@ httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 inflection==0.5.1
+iniconfig==2.0.0
 Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 mypy-extensions==1.0.0
 orjson==3.10.6
+packaging==24.1
+pluggy==1.5.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
 PyMySQL==1.1.1
+pytest==8.2.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
@@ -34,6 +38,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.31
 sqlalchemy-orm==1.2.10
 starlette==0.37.2
+tomli==2.0.1
 typer==0.12.3
 typing-inspect==0.9.0
 typing_extensions==4.12.2
