--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
         "app"
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+ 
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.formatOnSave": true,
 }
