Build : github workflow 파일수정
ref : a6f93854ab68cedb2db7639d8ad7bd42e2e52ac6

--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -3,7 +3,7 @@ name: Create PR to main
 on:
   pull_request:
     branches:
-      - aris/dev
+      - aris-hi5/dev
     types:
       - closed
 
@@ -22,7 +22,7 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          base: main
+          base: aris-hi5/main
           branch: ${{ github.ref }}
           title: "Automated PR from dev to main"
           body: "This PR was automatically created from dev to main."
